[gd_scene load_steps=4 format=3 uid="uid://dotdvedxotpwn"]

[ext_resource type="Theme" uid="uid://bwxvugjnwyt3m" path="res://style/ui_theme_oled.res" id="1_knupf"]
[ext_resource type="FontFile" uid="uid://cfrjh8tsnucol" path="res://style/YujiSyuku-Regular.ttf" id="2_d3i6s"]
[ext_resource type="Script" path="res://scripts/window_password.gd" id="3_1814c"]

[node name="WindowPassword" type="Window"]
auto_translate_mode = 1
title = "Locked"
initial_position = 2
size = Vector2i(300, 100)
unresizable = true
always_on_top = true
theme = ExtResource("1_knupf")
theme_override_fonts/title_font = ExtResource("2_d3i6s")
script = ExtResource("3_1814c")
max_attempts = 3

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PasswordInput" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Enter Password..."
context_menu_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonEnter" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Enter"

[node name="ButtonCancel" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonEnter" to="." method="_on_button_enter_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonCancel" to="." method="_on_button_cancel_pressed"]
